--- a/template/index.html
+++ b/template/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang=en xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <title>TABS v SPACES</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
@@ -54,11 +54,21 @@
   </div>
   <script>
     document.addEventListener("DOMContentLoaded", function() {
-      <!-- add Event Listener "click" to the vote -->
-      // document.getElementById("voteTabs").addEventListener("click", function () {
-      //   vote("TABS");
-      // });
-    })
+      // Add Event Listener for the sign-in button
+      document.getElementById("signInButton").addEventListener("click", function() {
+        toggle(); // Call toggle to sign in or out
+      });
+
+      // Add Event Listener for "Vote for TABS" button
+      document.getElementById("voteTabs").addEventListener("click", function() {
+        vote("TABS"); // Call vote function for TABS
+      });
+
+      // Add Event Listener for "Vote for SPACES" button
+      document.getElementById("voteSpaces").addEventListener("click", function() {
+        vote("SPACES"); // Call vote function for SPACES
+      });
+    });
   </script>
 </body>
 </html>
